align-items fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@
     max-width: 840 px;
     margin: 0 auto;
     display: grid;
-    align-items: space-around;
+    align-items: center;
     grid-template-areas:
       "aside main";
   }
